# StatisticalAnalysisTool

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  analysis_configuration.cpp  analysis_configuration.h  analysis_point.cpp  analysis_point.h  analyzer.cpp  analyzer.h  build.sh  categorized_distribution_analyzer.h  categorized_distribution_reproducer.h  category_analyzer.cpp  category_analyzer.h  category_properties.cpp  category_properties.h  central_widget.cpp  central_widget.h  constants.h  dependency_analyzer.cpp  dependency_analyzer.h  dialogs.cpp  dialogs.h  dice_roller.cpp  dice_roller.h  distribution_factory.cpp  distribution_factory.h  input_widget.cpp  input_widget.h  main.cpp  main_window.cpp  main_window.h  point_analyzer.cpp  point_analyzer.h  point_drawer.cpp  point_factory.cpp  point_factory.h  point_map.cpp  point_map.h  (+22 more)
analyser/: analysis_configuration.cpp  analyzer.cpp  analyzer.h  category_analyzer.cpp  category_analyzer.h  dependency_analyzer.cpp  dependency_analyzer.h  radial_distribution_analyzer.cpp  radial_distribution_analyzer.h
gui/: central_widget.cpp  central_widget.h  dialogs.cpp  dialogs.h  input_widget.cpp  input_widget.h  main.cpp  main_window.cpp  main_window.h  reproduction_config_dialog.cpp  reproduction_config_dialog.h
include/spatial_hashmap/: spatial_hashmap.h
plant_file/: distrib.cpp  distrib.h  vecpnt.h
reproducer/: distribution_factory.cpp  distribution_factory.h  point_factory.cpp  point_factory.h  reproducer.cpp  reproducer.h  reproduction_configuration.cpp  reproduction_configuration.h
test/: CMakeLists.txt  analysis_configuration_file_test.cpp  analysis_configuration_file_test.h  bin_test.cpp  bin_test.h  category_analyzer_test.h  category_properties_file_test.cpp  category_properties_file_test.h  category_reproducer_test.h  dependency_test.cpp  dependency_test.h  dice_roller_test.cpp  dice_roller_test.h  radial_distribution_analyzer_test.cpp  radial_distribution_analyzer_test.h  radial_distribution_file_test.cpp  radial_distribution_file_test.h  reproduction_test.cpp  reproduction_test.h  test_data_factory.cpp  test_data_factory.h  unit_tests.cpp
utils/: file_utils.cpp  file_utils.h  point_drawer.cpp  point_drawer.h  utils.cpp  utils.h
